--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,3 +7,16 @@
         @apply px-4 py-2 border rounded-full cursor-pointer hover:shadow-lg active:scale-95 active:bg-gray-100 transition transform duration-100 ease-out;
     }
 }
+
+.rdrDateRangePickerWrapper {
+    min-width: 350px;
+}
+
+@media screen and (max-width: 420px) {
+    .rdrDefinedRangesWrapper {
+        max-width: 0px;
+    }
+    .rdrDateRangePickerWrapper {
+        margin-top: 1rem;
+    }
+  }
